unpackaged/main/default/objects/Broker_Input__c/Broker_Input__c.object-meta.xml
<CustomObject>
    <label>Broker Input</label>
    <nameField>
        <displayFormat>BI-{00000}</displayFormat>
        <label>Broker Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>