unpackaged/main/default/objects/Broker_Input__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Inputs</relationshipLabel>
    <relationshipName>Broker_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>