unpackaged/main/default/objects/Broker_Input__c/fields/Address_Physical_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Physical_Ext_Id__c</fullName>
    <label>Address Physical Ext Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>