unpackaged/main/default/objects/Broker_Input__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Legal - QB Chargeoff Cases - Process to support mass upload SD-1015</description>
    <label>Bank Account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>