unpackaged/main/default/objects/Broker_Input__c/fields/Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Routing_Number__c</fullName>
    <description>Legal - QB Chargeoff Cases - Process to support mass upload SD-1015</description>
    <label>Bank Routing Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>