unpackaged/main/default/objects/Broker_Input__c/fields/Broker_Input_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Input_Status__c</fullName>
    <label>Broker Input Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>