unpackaged/main/default/objects/Broker_Input__c/fields/Broker_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Manager_Email__c</fullName>
    <label>Broker Manager Email</label>
    <type>Email</type>
</CustomField>