unpackaged/main/default/objects/Broker_Input__c/fields/Broker_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Manager_Name__c</fullName>
    <label>Broker Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>