unpackaged/main/default/objects/Broker_Input__c/fields/Date_Established_with_Current_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Date_Established_with_Current_Ownership__c</fullName>
    <label>Date Established with Current Ownership</label>
    <type>Date</type>
</CustomField>