unpackaged/main/default/objects/Broker_Input__c/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <label>DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>