unpackaged/main/default/objects/Broker_Input__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <description>This field will capture the Email Id from the Broker Input Automated Data Capture project.</description>
    <inlineHelpText>This field will capture the Email Id from the Broker Input Automated Data Capture project.</inlineHelpText>
    <label>Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>