unpackaged/main/default/objects/Broker_Input__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <displayFormat>BI-{000000}</displayFormat>
    <label>External Id</label>
    <type>AutoNumber</type>
</CustomField>