unpackaged/main/default/objects/Broker_Input__c/fields/G1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>G1_Last_Name__c</fullName>
    <label>G1 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>