unpackaged/main/default/objects/Broker_Input__c/fields/G1_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>G1_Mobile_Phone__c</fullName>
    <label>G1 Mobile Phone</label>
    <type>Phone</type>
</CustomField>