unpackaged/main/default/objects/Broker_Input__c/fields/G1_Ownership__c.field-meta.xml
<CustomField>
    <fullName>G1_Ownership__c</fullName>
    <label>G1 Ownership %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>