unpackaged/main/default/objects/Broker_Input__c/fields/G1_Title__c.field-meta.xml
<CustomField>
    <fullName>G1_Title__c</fullName>
    <label>G1 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>