unpackaged/main/default/objects/Broker_Input__c/fields/G2_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>G2_Birthdate__c</fullName>
    <label>G2 Birthdate</label>
    <type>Date</type>
</CustomField>