unpackaged/main/default/objects/Broker_Input__c/fields/G2_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>G2_Email_Address__c</fullName>
    <label>G2 Email Address</label>
    <type>Email</type>
</CustomField>