unpackaged/main/default/objects/Broker_Input__c/fields/G2_Home_State__c.field-meta.xml
<CustomField>
    <fullName>G2_Home_State__c</fullName>
    <description>Enter 2 letter state abbreviation.</description>
    <inlineHelpText>Enter 2 letter state abbreviation.</inlineHelpText>
    <label>G2 Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>