unpackaged/main/default/objects/Broker_Input__c/fields/G2_Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>G2_Home_Zip__c</fullName>
    <label>G2 Home Zip</label>
    <length>25</length>
    <type>Text</type>
</CustomField>