unpackaged/main/default/objects/Broker_Input__c/fields/G2_Title__c.field-meta.xml
<CustomField>
    <fullName>G2_Title__c</fullName>
    <label>G2 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>