unpackaged/main/default/objects/Broker_Input__c/fields/G3_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>G3_Birthdate__c</fullName>
    <label>G3 Birthdate</label>
    <type>Date</type>
</CustomField>