unpackaged/main/default/objects/Broker_Input__c/fields/G3_First_Name__c.field-meta.xml
<CustomField>
    <fullName>G3_First_Name__c</fullName>
    <label>G3 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>