unpackaged/main/default/objects/Broker_Input__c/fields/G3_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>G3_Mobile_Phone__c</fullName>
    <label>G3 Mobile Phone</label>
    <type>Phone</type>
</CustomField>