unpackaged/main/default/objects/Broker_Input__c/fields/G3_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>G3_Social_Security__c</fullName>
    <label>G3 Social Security #</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>