unpackaged/main/default/objects/Broker_Input__c/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <label>Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
                <default>true</default>
                <label>Broker</label>
            </value>
            <value>
                <fullName>External Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>