unpackaged/main/default/objects/Broker_Input__c/fields/Legal_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Company_Name__c</fullName>
    <label>Legal Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>