unpackaged/main/default/objects/Broker_Input__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <description>Legal - QB Chargeoff Cases - Process to support mass upload SD-1015</description>
    <label>Loan Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>