unpackaged/main/default/objects/Broker_Input__c/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <description>Legal - QB Chargeoff Cases - Process to support mass upload SD-1015</description>
    <label>Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>