unpackaged/main/default/objects/Broker_Input__c/fields/Partner_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Preferred_Email__c</fullName>
    <label>Partner Preferred Email</label>
    <type>Email</type>
</CustomField>