unpackaged/main/default/objects/Broker_Input__c/fields/Payments_Collected__c.field-meta.xml
<CustomField>
    <fullName>Payments_Collected__c</fullName>
    <label>Payments Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>