unpackaged/main/default/objects/Broker_Input__c/fields/Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Amount__c</fullName>
    <description>Legal - QB Chargeoff Cases - Process to support mass upload - SD-1015</description>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>