unpackaged/main/default/objects/Broker_Input__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>