unpackaged/main/default/objects/Broker_Input__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <description>Used in the Internal Broker Input flow to decision who should be assigned as owner for newly created records. For Broker deals, Broker portal user should be owner, for referral deals Account owner should be owner.</description>
    <inlineHelpText>Choose whether this submission is for a Referral Partner or Broker deal.</inlineHelpText>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
                <default>true</default>
                <label>Broker</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>