unpackaged/main/default/objects/Broker_Input__c/fields/Unique_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Transaction_Id__c</fullName>
    <description>This field will capture the Id of an email that is sent from a Broker.</description>
    <inlineHelpText>This field will capture the Id of an email that is sent from a Broker.</inlineHelpText>
    <label>Unique Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>