unpackaged/main/default/objects/Broker_Input__c/fields/Use_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Funds__c</fullName>
    <label>Use of Funds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital</fullName>
                <default>true</default>
                <label>Working Capital</label>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Buy a Business</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Equipment Purchase</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Receivables</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Remodeling</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>