unpackaged/main/default/objects/Broker_Input__c/validationRules/Broker_Input_Federal_Tax_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Input_Federal_Tax_Id</fullName>
    <active>true</active>
    <description>Federal Tax ID validation rule. Does not apply to Broker users submitting deals through the portal or the Broker API. User Profile ID = 00e80000001CNRw; nfapi user = 00e80000001CNzD</description>
    <errorConditionFormula>AND(
NOT($User.Id = '00534000009BfAK'),
NOT($User.ProfileId='00e80000001CNRw'),
NOT($User.ProfileId='00e80000001CNzD'),
NOT(REGEX(Fed_Tax_ID__c ,"[0-9]{2}-[0-9]{7}")),
NOT(REGEX(Fed_Tax_ID__c ,"[0-9]{9}"))
)</errorConditionFormula>
    <errorDisplayField>Fed_Tax_ID__c</errorDisplayField>
    <errorMessage>The entered Federal Tax Id number is incorrect. Please ensure the following formatting is followed: ##-####### or ######### and that there are 9 numeric digits.</errorMessage>
</ValidationRule>