unpackaged/main/default/objects/Broker_Input__c/validationRules/two_letter_abbreviation_reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>two_letter_abbreviation_reqd</fullName>
    <active>true</active>
    <description>Must enter state with 2 letter abbreviation</description>
    <errorConditionFormula>AND(!ISBLANK(State__c ), LEN(State__c ) != 2)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Must enter state using 2 letter abbreviation</errorMessage>
</ValidationRule>