unpackaged/main/default/objects/Broker_Input__c/validationRules/two_letter_abbreviation_reqd_g2state.validationRule-meta.xml
<ValidationRule>
    <fullName>two_letter_abbreviation_reqd_g2state</fullName>
    <active>true</active>
    <description>Must enter state with 2 letter abbreviation</description>
    <errorConditionFormula>AND(!ISBLANK(G2_Home_State__c ), LEN(G2_Home_State__c ) != 2)</errorConditionFormula>
    <errorDisplayField>G2_Home_State__c</errorDisplayField>
    <errorMessage>Must enter state using 2 letter abbreviation</errorMessage>
</ValidationRule>