unpackaged/main/default/objects/Broker_Input__c/validationRules/two_letter_abbreviation_reqd_gstate.validationRule-meta.xml
<ValidationRule>
    <fullName>two_letter_abbreviation_reqd_gstate</fullName>
    <active>true</active>
    <description>Must enter state with 2 letter abbreviation</description>
    <errorConditionFormula>AND(!ISBLANK(G1_Home_State__c ), LEN(G1_Home_State__c ) != 2)</errorConditionFormula>
    <errorDisplayField>G1_Home_State__c</errorDisplayField>
    <errorMessage>Must enter state using 2 letter abbreviation</errorMessage>
</ValidationRule>