unpackaged/main/default/objects/Broker_Input__c/validationRules/ZipCode_Format_Validation_G3.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCode_Format_Validation_G3</fullName>
    <active>true</active>
    <description>Valid proper format for 5 or 9 digit US Zipcode</description>
    <errorConditionFormula>NOT(ISBLANK(G3_Home_Zip__c))&amp;&amp; 
AND(NOT(REGEX(G3_Home_Zip__c , "\\d{5}(-\\d{4})?")))</errorConditionFormula>
    <errorDisplayField>G3_Home_Zip__c</errorDisplayField>
    <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
</ValidationRule>